GD-457: Fix CSS so that sidebar is responsive on small screens. (#462)
# Why
Enable the sidebar to be responsive to support mobile users.


# What
Simplified CSS while still keeping the logo large.

--- a/assets/css/site-header.css
+++ b/assets/css/site-header.css
@@ -1,28 +1,7 @@
-.main {
-    position: relative;
-    max-width: 1200px;
-    margin-left: calc((100% - 1264px) / 2 + 264px);
-}
-
 .site-header {
-    display: flex;
-    min-height: 140px;
-    align-items: center;
+    height: 6rem;
+    max-height: 6rem;
 }
-
-.side-bar {
-    width: calc((100% - 1264px) / 2 + 264px);
-    min-width: 64px;
-}
-
-.site-logo {
-    min-height: 130px;
-}
-
-.site.title {
-    position: relative;
-}
-
 
 h1,
 h2,
@@ -58,7 +37,6 @@ h3,
 h4 {
     margin-top: 1.25rem;
 }
-
 
 img.centered {
     display: block;
